--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
          {{>header}}
-    
+    <p>This site was created by Sangeeta Guttedar.It uses data from mapbox.com and weathestack.</p>
     <img src="./img/robot.png" >
     </div>
    
