--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,8 +13,8 @@
      <div class="main-content">
          {{>header}}
          <p>Use this site to get your weather!</p>
-         <form action="">
-             <input type="text">
+         <form >
+             <input type="text" placeholder="Enter Location">
              <button>search</button>
          </form>
      </div>
